--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,11 +34,12 @@ steps:
 
 
 
-- task: DotNetCoreCLI@2
+# - task: DotNetCoreCLI@2
+- script: dotnet restore
   displayName: 'Restore project dependencies'
-  inputs:
-    command: 'restore'
-    projects: '**/*.csproj'
+  # inputs:
+  #   command: 'restore'
+  #   projects: '**/*.csproj'
 
 - template: templates/build.yml
   parameters:
