--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,8 +39,7 @@ steps:
   inputs:
     command: 'restore'
     projects: '**/*.csproj'
-    versionEnvVar:
-      DOTNET_CLI_HOME: /tmp
+    versionEnvVar: DOTNET_CLI_HOME
 
 - template: templates/build.yml
   parameters:
